# q3dfm-init

./: .gitignore  pyproject.toml
conso_fr/: conso_fr.ipynb  conso_fr.py
q3dfm/: EMstep.py  EMstepAR.py  InitAR.py  InitCond.py  KF.py  Ksmooth.py  dfm.py  em_converged.py  get_HJ.py  helper_mat.py  long_run_var.py  runKF.py  set_frequencies.py  test.ipynb
tests/: test_helper_mat_pytest.py
